--- a/src/app/page/registro/registro.component.html
+++ b/src/app/page/registro/registro.component.html
@@ -83,32 +83,25 @@
 
         <!-- Campo de Foto -->
         <div class="relative">
-          <!-- Input de texto para mostrar el nombre del archivo -->
-          <div class="relative">
-            <input type="text" [value]="selectedFileName || ''" placeholder="Foto" disabled
-                   class="block w-full pl-12 rounded-md border-0 py-1.5 text-gray-900 shadow-sm
-                  ring-1 ring-inset ring-gray-300 placeholder:text-gray-400
-                  focus:ring-2 focus:ring-inset focus:ring-sky-400 sm:text-sm/6 bg-gray-100">
+          <!-- Input de texto para ingresar la URL de la imagen -->
+          <input id="foto" type="text" formControlName="foto" required
+                 class="block w-full pl-12 rounded-md border-0 py-1.5 text-gray-900 shadow-sm
+                ring-1 ring-inset ring-gray-300 placeholder:text-gray-400
+                focus:ring-2 focus:ring-inset focus:ring-sky-400 sm:text-sm/6"
+                 placeholder="URL de la foto">
 
-            <!-- Ícono de Cámara dentro del input -->
-            <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
-              <i class="fa-solid fa-camera text-gray-400"></i>
-            </div>
+          <!-- Ícono de Cámara dentro del input -->
+          <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+            <i class="fa-solid fa-camera text-gray-400"></i>
           </div>
 
-          <!-- Input de archivo (oculto visualmente, pero funcional) -->
-          <input id="foto" type="file" formControlName="foto" required
-                 (change)="onFileSelected($event)"
-                 class="mt-2 block w-full text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300
-                file:bg-gray-200 file:text-gray-700 file:rounded-md file:px-4 file:py-1.5
-                hover:file:bg-gray-300 cursor-pointer">
-
-          <!-- Mensaje de error -->
+          <!-- Mensaje de error si el campo es inválido -->
           <div *ngIf="registroForm.get('foto')?.invalid && registroForm.get('foto')?.touched"
                class="text-red-500">
             Foto inválida.
           </div>
         </div>
+
 
 
 
