Funcionalidad ver detalle libro en proceso

--- a/src/app/page/catalogo/catalogo.component.html
+++ b/src/app/page/catalogo/catalogo.component.html
@@ -133,7 +133,7 @@
         <path d="m354-287 126-76 126 77-33-144 111-96-146-13-58-136-58 135-146 13 111 97-33 143ZM233-120l65-281L80-590l288-25 112-265 112 265 288 25-218 189 65 281-247-149-247 149Zm247-350Z"/>
       </svg>
 
-      <button class="mt-3 px-3 py-1.5 bg-blue-900 text-white text-sm rounded hover:bg-blue-700">Ver detalles</button>
+      <button (click)="verDetallesLibro(libro.id)" class="mt-3 px-3 py-1.5 bg-blue-900 text-white text-sm rounded hover:bg-blue-700">Ver detalles</button>
     </div>
 
 
